Bug 1770544 - Avoid AUTO_PROFILER_THREAD_WAKE re-#define in non-MOZ_GECKO_PROFILER builds - r=gaston

This should remove the redefinition warning.
@gaston could you please test it on your system? I've tried simulating a non-MOZ_GECKO_PROFILER build locally, but I'm hitting other build errors -- but maybe I'm doing it wrong. Thanks!

Differential Revision: https://phabricator.services.mozilla.com/D148582